Fixed issue with footer z-index during nav animation

--- a/src/app/bag/components/bag/bag.page.scss
+++ b/src/app/bag/components/bag/bag.page.scss
@@ -1,9 +1,5 @@
 @use "../../../../assets/styles/buttons" as *;
 
-ion-footer {
-  height: 5rem;
-}
-
 ion-item {
   font-size: 0.8rem;
 }
