--- a/src/app/menu-item/components/menu-item/menu-item.page.scss
+++ b/src/app/menu-item/components/menu-item/menu-item.page.scss
@@ -22,10 +22,6 @@
   }
 }
 
-ion-footer {
-  height: 5rem;
-}
-
 .ios ion-label {
   margin-top: 0;
   margin-bottom: 0.25rem;
